# SHAPE

./: Makefile  README_CN.md  fused_inference.py  pyproject.toml  run_dpo.sh  train.sh  train_preference_alignment.py
configs/: config.py
datasets/: ocrvqa_answer_file_8k_dpo.jsonl  ocrvqa_answer_file_8k_merged.jsonl  textvqa_answer_file_8k_dpo.jsonl
shape/: __init__.py
shape/core/: __init__.py  logger.py  utils.py
shape/evaluation/: __init__.py  benchmarks.py  hallucination_metrics.py
shape/training/: __init__.py  preference_trainer.py
